[gd_scene load_steps=2 format=3 uid="uid://djckbjv7x1ve5"]

[ext_resource type="Script" uid="uid://174okntt0ofd" path="res://Scripts/MainMenu.gd" id="1_qwwyl"]

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qwwyl")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Title" type="Label" parent="CanvasLayer"]
offset_top = 253.0
offset_right = 800.0
offset_bottom = 800.0
theme_override_font_sizes/font_size = 106
text = "SPIN:R"
horizontal_alignment = 1

[node name="MapsButton" type="Button" parent="CanvasLayer"]
offset_left = 323.0
offset_top = 489.0
offset_right = 474.0
offset_bottom = 533.0
theme_override_font_sizes/font_size = 26
text = "Play Map"

[node name="MapMakerButton" type="Button" parent="CanvasLayer"]
offset_left = 323.0
offset_top = 540.0
offset_right = 474.0
offset_bottom = 584.0
theme_override_font_sizes/font_size = 26
text = "Map Maker"

[node name="PracticeButton" type="Button" parent="CanvasLayer"]
offset_left = 323.0
offset_top = 592.0
offset_right = 474.0
offset_bottom = 636.0
theme_override_font_sizes/font_size = 26
text = "Practice"

[connection signal="pressed" from="CanvasLayer/MapsButton" to="." method="_on_debug_button_pressed"]
[connection signal="pressed" from="CanvasLayer/MapMakerButton" to="." method="_on_map_maker_button_pressed"]
[connection signal="pressed" from="CanvasLayer/PracticeButton" to="." method="_on_practice_button_pressed"]
